# ska-sdp-notebooks

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  Dockerfile  LICENCE  Makefile  README.md  pyproject.toml
docs/src/: conf.py  index.rst  sdp-notebooks.rst  sdp_notebooks.rst  ska-binderhub.rst  ska_binderhub.rst
notebooks/: ska-sdp-cli-tutorial.ipynb
src/: ska-sdp-cli-tutorial.ipynb  ska-sdp-dask-script.ipynb  ska-sdp-deploy-tutorial.ipynb  ska-sdp-emulated-receive.ipynb  ska-sdp-emulated-scan-demo.ipynb  ska-sdp-emulated-scan-example-04.ipynb  ska-sdp-emulated-scan-example.ipynb  ska-sdp-tango-tutorial.ipynb  ska-sdp-tutorial.ipynb  ska-sdp-vis-receive-example.ipynb  ska-sdp-vis-receive-low-example.ipynb
