[tool.poetry]
name = "ska-sdp-notebooks"
version = "0.0.0"
description = "SKA SDP Notebooks"
authors = ["SKA SDP Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-notebooks"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.4.12"
ska-sdp-config = "^0.4.0"
ska-ser-logging = "^0.4.1"
ska-sdp-cbf-emulator = "^3.2.0"
jupyterlab = "^3.4.4"
jupyterhub = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
